Adding partition put and permissions for namespaces
